# CMake-Tutorial

Step1/: CMakelists.txt  readme.md  tutorial.cxx
Step1_Build/: CMakeCache.txt  Makefile  cmake_install.cmake
Step2/: CMakeLists.txt
Step2/MathFunctions/: CMakeLists.txt  mysqrt.cxx
Step2_Build/: CMakeCache.txt  Makefile  Tutorial  cmake_install.cmake
Step2_Build/MathFunctions/: Makefile  cmake_install.cmake
Step3/: CMakeLists.txt  tutorial.cxx
Step3/MathFunctions/: CMakeLists.txt  MathFunctions.cxx  MathFunctions.h  mysqrt.cxx  mysqrt.h
Step3_Build/: CMakeCache.txt  Makefile  cmake_install.cmake
Step3_Build/MathFunctions/: Makefile  cmake_install.cmake
